--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Casino Homepage</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
@@ -50,42 +50,42 @@
       <img class="cardPics" src="./assets/spades.webp" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>Play Spades!</h2></span><h3>€5.50</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, Spades, with the chance of winning up to 50,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, Spades, with the chance of winning up to 50,000 euro! Don't miss out! You could be our next winner!</p>
     </div>    
 
     <div class="card">
       <img class="cardPics" src="./assets/PaySlots.webp" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>Play PayDay Slots</h2></span><h3>€7.50</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, PaydaySlots, with the chance of winning up to 50,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, PaydaySlots, with the chance of winning up to 50,000 euro! Don't miss out! You could be our next winner!</p>
     </div>    
 
     <div class="card">
       <img class="cardPics" src="./assets/triple cashword.jpg" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>Play TripleCashWord</h2></span><h3>€10</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, TripleCashWord, with the chance of winning up to 300,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, TripleCashWord, with the chance of winning up to 300,000 euro! Don't miss out! You could be our next winner!</p>
     </div>    
 
     <div class="card">
       <img class="cardPics" src="./assets/Bingo.jpg" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>Play Bingo</h2></span><h3>€5.50</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, Bingo, with the chance of winning up to 10,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, Bingo, with the chance of winning up to 10,000 euro! Don't miss out! You could be our next winner!</p>
     </div>   
 
     <div class="card">
       <img class="cardPics" src="./assets/chicken.webp" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>Chicken or the Egg?</h2></span><h3>€3.50</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, Chicken or the EGG?, with the chance of winning up to 30,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, Chicken or the EGG?, with the chance of winning up to 30,000 euro! Don't miss out! You could be our next winner!</p>
     </div>
 
     <div class="card">
       <img class="cardPics" src="./assets/Cashword.jpg" alt="image of spades card game">
       <span class="title"><span class="main-title"><h2>CashWord</h2></span><h3>€3.50</h3></span>
       <div class="divider"></div>
-      <p class="gameinfo">Play our new card game, CashWord, with the chance of winning up to 30,000 euro! Don't miss out! You could be our next winner!</p>
+      <p class="gameinfo">Play our new game, CashWord, with the chance of winning up to 30,000 euro! Don't miss out! You could be our next winner!</p>
     </div>
   </section>
 
